# file-manager

./: CMakeLists.txt  README.md
src/: context.c  context.h  filesystem.c  filesystem.h  logging.h  logic.c  logic.h  main.c  menu_state.c  menu_state.h  path_list.c  path_list.h
